ra144enc: fix use of scalarprod_int16

c3390fd56cf55259ea7665ecea6c8aeddf56e2fc made use of the DSP function
but did not complement it with a call to emms, which is done here before
computations involving floats are performed.

Fixes ticket #3429, which affected MMX/MMXExt machines.

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>